SUBDIRS = processor collection com network plugin util .

lib_LTLIBRARIES = libfirtexext.la

libfirtexext_la_SOURCES = 
libfirtexext_la_LIBADD = \
	collection/libfirtexext_collection.la\
	processor/libfirtexext_processor.la\
	com/libfirtexext_com.la\
	network/libfirtexext_network.la\
	plugin/libfirtexext_plugin.la\
	util/libfirtexext_util.la
