pluginsdir = ${exec_prefix}/firtex2/plugins
nobase_dist_plugins_DATA = \
	xpdf/chinese-simplified\
	xpdf/chinese-simplified/EUC-CN.unicodeMap\
	xpdf/chinese-simplified/Adobe-GB1.cidToUnicode\
	xpdf/chinese-simplified/CMap\
	xpdf/chinese-simplified/CMap/GBpc-EUC-H\
	xpdf/chinese-simplified/CMap/GBpc-EUC-V\
	xpdf/chinese-simplified/CMap/UniGB-UTF16-H\
	xpdf/chinese-simplified/CMap/Adobe-GB1-UCS2\
	xpdf/chinese-simplified/CMap/GB-EUC-H\
	xpdf/chinese-simplified/CMap/GBK-EUC-UCS2\
	xpdf/chinese-simplified/CMap/GBK2K-V\
	xpdf/chinese-simplified/CMap/Adobe-GB1-3\
	xpdf/chinese-simplified/CMap/GBKp-EUC-H\
	xpdf/chinese-simplified/CMap/GBpc-EUC-UCS2C\
	xpdf/chinese-simplified/CMap/UniGB-UCS2-V\
	xpdf/chinese-simplified/CMap/GBT-EUC-H\
	xpdf/chinese-simplified/CMap/GBpc-EUC-UCS2\
	xpdf/chinese-simplified/CMap/GBT-H\
	xpdf/chinese-simplified/CMap/Adobe-GB1-1\
	xpdf/chinese-simplified/CMap/GB-V\
	xpdf/chinese-simplified/CMap/GBK-EUC-H\
	xpdf/chinese-simplified/CMap/UniGB-UTF8-V\
	xpdf/chinese-simplified/CMap/UniGB-UTF16-V\
	xpdf/chinese-simplified/CMap/Adobe-GB1-4\
	xpdf/chinese-simplified/CMap/GBK-EUC-V\
	xpdf/chinese-simplified/CMap/GBTpc-EUC-V\
	xpdf/chinese-simplified/CMap/GBKp-EUC-V\
	xpdf/chinese-simplified/CMap/GB-H\
	xpdf/chinese-simplified/CMap/Adobe-GB1-2\
	xpdf/chinese-simplified/CMap/GB-EUC-V\
	xpdf/chinese-simplified/CMap/Adobe-GB1-0\
	xpdf/chinese-simplified/CMap/GBT-V\
	xpdf/chinese-simplified/CMap/GBT-EUC-V\
	xpdf/chinese-simplified/CMap/UniGB-UCS2-H\
	xpdf/chinese-simplified/CMap/GBTpc-EUC-H\
	xpdf/chinese-simplified/CMap/GBK2K-H\
	xpdf/chinese-simplified/CMap/UniGB-UTF8-H\
	xpdf/chinese-simplified/GBK.unicodeMap\
	xpdf/chinese-simplified/README\
	xpdf/chinese-simplified/ISO-2022-CN.unicodeMap\
	xpdf/chinese-simplified/add-to-xpdfrc\
	xpdf/xpdfrc\
	charsets\
	charsets/cp866.txt\
	charsets/cp863.txt\
	charsets/tex.spc\
	charsets/8859-11.txt\
	charsets/8859-2.txt\
	charsets/mac-cyrillic.txt\
	charsets/cp1258.txt\
	charsets/mac-roman.txt\
	charsets/mac-centeuro.txt\
	charsets/cp1257.txt\
	charsets/cp860.txt\
	charsets/8859-1.txt\
	charsets/koi8-r.txt\
	charsets/tex.rpl\
	charsets/cp1255.txt\
	charsets/8859-13.txt\
	charsets/koi8-u.txt\
	charsets/cp855.txt\
	charsets/cp865.txt\
	charsets/cp1254.txt\
	charsets/ascii.rpl\
	charsets/cp1250.txt\
	charsets/mac-greek.txt\
	charsets/ascii.spc\
	charsets/cp936.txt\
	charsets/8859-6.txt\
	charsets/cp862.txt\
	charsets/cp869.txt\
	charsets/8859-9.txt\
	charsets/cp864.txt\
	charsets/cp852.txt\
	charsets/8859-5.txt\
	charsets/8859-4.txt\
	charsets/mac-arabic.txt\
	charsets/us-ascii.txt\
	charsets/cp850.txt\
	charsets/.cvsignore\
	charsets/cp874.txt\
	charsets/8859-15.txt\
	charsets/cp861.txt\
	charsets/cp1252.txt\
	charsets/cp1251.txt\
	charsets/8859-3.txt\
	charsets/cp437.txt\
	charsets/8859-7.txt\
	charsets/cp1256.txt\
	charsets/8859-14.txt\
	charsets/mac-hebrew.txt\
	charsets/8859-10.txt\
	charsets/cp857.txt\
	charsets/8859-8.txt\
	charsets/cp1253.txt\
	plugins.xml