INCLUDES = -I $(top_srcdir)/include

noinst_LTLIBRARIES = libcommon.la

libcommon_la_SOURCES =	\
	LayoutAppender.cpp\
	ConsoleAppender.cpp\
	FileAppender.cpp\
	AppenderFactory.cpp\
	LoggingLayoutFactory.cpp\
	BasicLoggingLayout.cpp\
	PatternLoggingLayout.cpp\
	RefCountedObject.cpp\
	Notifier.cpp\
	LoggingLevel.cpp\
	Logger.cpp\
	Portability.cpp

EXTRA_DIST = snprintf.c

