AM_CPPFLAGS = -I $(top_srcdir)/include
AUTOMAKE_OPTIONS = subdir-objects

noinst_LTLIBRARIES = libindex.la

libindex_la_SOURCES = \
	BarrelTermPositionIterator.cpp\
	BarrelTermPostingIterator.cpp\
	CommitList.cpp\
	BarrelsInfo.cpp\
	ByteSliceInputStream.cpp\
	ByteSliceOutputStream.cpp\
	ComponentBuilder.cpp\
	ComponentCreatorFactory.cpp\
	DeletedDocumentFilter.cpp\
	DocPostingDecoder.cpp\
	DocPostingMerger.cpp\
	DocPostingWriter.cpp\
	DocSkipListReader.cpp\
	DocSkipListWriter.cpp\
	AsyncDocumentConsumer.cpp\
	FieldMerger.cpp\
	ForwardIndexFactory.cpp\
	InMemIndexBarrelReader.cpp\
	InMemIndexMerger.cpp\
	Index.cpp\
	IndexBarrelReader.cpp\
	IndexBarrelWriter.cpp\
	IndexBarrelKeeper.cpp\
	IndexMerger.cpp\
	IndexReader.cpp\
	IndexWriter.cpp\
	LengthNormMerger.cpp\
	LengthNormReader.cpp\
	LengthNormWriter.cpp\
	Makefile.am\
	Makefile.in\
	MultiFieldTermReader.cpp\
	MultiIndex.cpp\
	MultiIndexBarrelReader.cpp\
	MultiIndexReader.cpp\
	MultiPostingDecoder.cpp\
	MultiStoredFieldsReader.cpp\
	MultiTermIterator.cpp\
	MultiTermPostingIterator.cpp\
	MultiTermReader.cpp\
	DocIdRecycling.cpp\
	OptPFDPostingCoding.cpp\
	OptimizeMergePolicy.cpp\
	DBTMergePolicy.cpp\
	MergePolicyFactory.cpp\
	PosPostingDecoder.cpp\
	PosPostingMerger.cpp\
	PosPostingWriter.cpp\
	PosSkipListReader.cpp\
	PosSkipListWriter.cpp\
	PostingCodingFactory.cpp\
	PrimaryKeyIndex.cpp\
	SingleIndexBarrelReader.cpp\
	StoredFieldsMerger.cpp\
	StoredFieldsReaderImpl.cpp\
	StoredFieldsWriter.cpp\
	Term.cpp\
	SyncCommitScheduler.cpp\
	AsyncCommitScheduler.cpp\
	BarrelDirectory.cpp\
	KeepByCommitIndexCleaner.cpp\
	IndexCleanerFactory.cpp\
	SequenceMergeScheduler.cpp\
	ConcurrentMergeScheduler.cpp\
	compress/OptPForDeltaCoding.cpp\
	compress/Pack.cpp\
	compress/S16Coding.cpp\
	compress/Unpack.cpp\
	text/TextComponentCreator.cpp\
	text/TextIndexMerger.cpp\
	text/TextIndexer.cpp\
	text/TextTermIterator.cpp\
	text/TextTermReader.cpp\
	text/InMemTextTermReader.cpp\
	keyword/KeywordComponentCreator.cpp\
	keyword/KeywordIndexMerger.cpp\
	keyword/KeywordIndexer.cpp\
	keyword/KeywordTermIterator.cpp\
	keyword/KeywordTermReader.cpp\
	keyword/InMemKeywordTermReader.cpp\
	primarykey/PrimaryKeyTermReader.cpp\
	primarykey/PrimaryKeyTermIterator.cpp\
	primarykey/PrimaryKeyPostingDecoder.cpp\
	primarykey/PrimaryKeyIndexer.cpp\
	primarykey/PrimaryKeyMerger.cpp\
	primarykey/PrimaryKeyCreator.cpp\
	datetime/DateTimeComponentCreator.cpp\
	datetime/DateTimeIndexMerger.cpp\
	datetime/DateTimeIndexer.cpp\
	datetime/DateTimeTermIterator.cpp\
	datetime/DateTimeTermReader.cpp\
	datetime/InMemDateTimeTermReader.cpp
