INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/contrib/highlighter/include

noinst_LTLIBRARIES = libsearch.la

search_srcdir= $(top_srcdir)/src/search

libsearch_la_SOURCES = AndQueryExecutor.cpp\
	BooleanQuery.cpp\
	BooleanQueryExecutorBuilder.cpp\
	DefaultSimilarity.cpp\
	FeatureProvider.cpp\
	IndexFeature.cpp\
	QueryFeature.cpp\
	IndexSearcher.cpp\
	OrQueryExecutor.cpp\
	PhraseQuery.cpp\
	PhraseQueryExecutor.cpp\
	Query.cpp\
	QueryExecutor.cpp\
	QueryHits.cpp\
	QueryResult.cpp\
	XMLResultFormatter.cpp\
	XMLResultParser.cpp\
	ResultCollectorImpl.cpp\
	RangeQuery.cpp\
	ReqOptQueryExecutor.cpp\
	ReqProhQueryExecutor.cpp\
	ScorerProfile.cpp\
	ScorerProfileFactory.cpp\
	Similarity.cpp\
	SimpleHitCollector.cpp\
	Sorter.cpp\
	Filter.cpp\
	MatchComparator.cpp\
	SortedHitCollector.cpp\
	TermQuery.cpp\
	TermQueryExecutor.cpp\
	BM25Scorer.cpp\
	Statement.cpp\
	QueryClause.cpp\
	ParameterClause.cpp\
	SortClause.cpp\
	FilterClause.cpp\
	FieldSelectClause.cpp\
	DocSelectClause.cpp\
	ArgListExprEvaluator.cpp\
	QueryTracerAppender.cpp\
	QueryTracer.cpp

