INCLUDES = -I $(top_srcdir)/include -I $(top_srcdir)/src/external

noinst_LTLIBRARIES = libutility.la

libutility_la_SOURCES = Exception.cpp\
	TimeProbe.cpp\
	KeyValueParser.cpp\
	BitVector.cpp\
	ZLib.cpp\
	ZIPFile.cpp\
	DateTime.cpp\
	MiscUtil.cpp\
	Reader.cpp\
	StringUtils.cpp\
	StringTokenizer.cpp\
	MMapFile.cpp\
	LooseBoundedPool.cpp\
	SyncSegregatedAllocator.cpp\
	SimpleSegregatedAllocator.cpp\
	TextFile.cpp\
	BinaryFile.cpp\
	BinaryFile_POSIX.cpp\
	File.cpp\
	File_LINUX.cpp\
	Path.cpp\
	Path_LINUX.cpp\
	Environment.cpp\
	Environment_LINUX.cpp\
	DirectoryIterator.cpp\
	DirectoryIterator_POSIX.cpp\
	SystemInitializer.cpp\
	Hash.cpp\
	Timestamp.cpp\
	Timespan.cpp\
	Number.cpp\
	NumberParser.cpp\
	NumberFormatter.cpp\
	SimpleAllocator.cpp\
	XMLDocumentWrapper.cpp\
	URLDecoder.cpp\
	IconvWrapper.cpp

EXTRA_DIST = File_WIN32.cpp\
	Environment_WIN32.cpp\
	DirectoryIterator_WIN32.cpp\
	MMapFile_WIN32.cpp\
	MMapFile_POSIX.cpp\
	BinaryFile_WIN32.cpp\
	Path_WIN32.cpp