testdata_dir = $(top_srcdir)/test/testdata

EXTRA_DIST += $(testdata_dir)/conf/test_config.xml\
	$(testdata_dir)/conf/logger_conf.xml\
	$(testdata_dir)/xmlconfiguratortest.xml\
	$(testdata_dir)/testload.sym\
	$(testdata_dir)/txt_files/0.txt\
	$(testdata_dir)/txt_files/1.txt\
	$(testdata_dir)/txt_files/2.txt\
	$(testdata_dir)/txt_files/3.txt\
	$(testdata_dir)/txt_files/4.txt\
	$(testdata_dir)/txt_files/5.txt
